[tool.poetry]
name = "online_store_bot"
version = "0.0.1"
description = "Online store bot"
authors = ["SaD-Pr0ger <sad.pr0ger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "2.25.2"
uvloop = "^0.19.0"
ujson = "^5.9.0"
aiodns = "^3.2.0"
aiohttp = {version = "3.8.6", extras = ["speedups"]}
environs = "^11.0.0"
alembic = "^1.13.1"
gino = "^1.0.1"
psycopg2-binary = "^2.9.9"
qrcode = {extras = ["pil"], version = "^7.4.2"}
redis = "^5.0.4"
hiredis = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
